// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paddingRight renders 0 1`] = `
Array [
  .c0 {
  padding-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingRight renders function 1`] = `
Array [
  .c0 {
  padding-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: has;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: has;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingRight renders invalid theme path 1`] = `
Array [
  .c0 {
  padding-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingRight renders negative number 1`] = `
Array [
  .c0 {
  padding-right: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingRight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    padding-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    padding-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-right: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-right: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingRight renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    padding-right: July;
  }
}

@media April {
  .c0 {
    padding-right: August;
  }
}

@media January {
  .c0 {
    padding-right: September;
  }
}

@media April {
  .c0 {
    padding-right: November;
  }
}

@media June {
  .c0 {
    padding-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    padding-right: July;
  }
}

@media April {
  .c0 {
    padding-right: August;
  }
}

@media January {
  .c0 {
    padding-right: September;
  }
}

@media April {
  .c0 {
    padding-right: November;
  }
}

@media June {
  .c0 {
    padding-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-right: January;
  }
}

@media April {
  .c0 {
    padding-right: December;
  }
}

@media January {
  .c0 {
    padding-right: April;
  }
}

@media April {
  .c0 {
    padding-right: May;
  }
}

@media June {
  .c0 {
    padding-right: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-right: January;
  }
}

@media April {
  .c0 {
    padding-right: December;
  }
}

@media January {
  .c0 {
    padding-right: April;
  }
}

@media April {
  .c0 {
    padding-right: May;
  }
}

@media June {
  .c0 {
    padding-right: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingRight renders postitive number 1`] = `
Array [
  .c0 {
  padding-right: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingRight renders string 1`] = `
Array [
  .c0 {
  padding-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: June;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: June;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingRight renders valid theme path 1`] = `
Array [
  .c0 {
  padding-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
